--- a/templates/crate/0/docker-compose.yml
+++ b/templates/crate/0/docker-compose.yml
@@ -1,5 +1,5 @@
 crate-nodes:
-  image: jannishuebl/crate-conf:v0.0.1
+  image: jannishuebl/crate-conf:0.0.1
   labels:
     io.rancher.container.hostname_override: container_name
     io.rancher.sidekicks: crate-base-node,crate-datavolume-node
