--- a/templates/crate/0/docker-compose.yml
+++ b/templates/crate/0/docker-compose.yml
@@ -3,7 +3,8 @@ crate-nodes:
   labels:
     io.rancher.container.hostname_override: container_name
     io.rancher.sidekicks: crate-base-node,crate-datavolume-node
-    io.rancher.scheduler.affinity:container_label_ne: io.rancher.stack_service.name=$${stack_name}/$${service_name}
+    io.rancher.scheduler.affinity:container_label_ne: io.rancher.stack_service.name=${stack_name}/${service_name}
+    io.rancher.container.pull_image: always
   volumes_from:
     - crate-datavolume-node
 crate-datavolume-node:
