--- a/templates/crate/0/docker-compose.yml
+++ b/templates/crate/0/docker-compose.yml
@@ -24,7 +24,7 @@ crate-base-node:
     io.rancher.container.hostname_override: container_name
   image: crate:0.55
   entrypoint:
-    - /opt/rancher/bin/run.sh
+    - /bin/sh /opt/rancher/bin/run.sh
   volumes_from:
     - crate-datavolume-node
   ports:
