--- a/templates/crate/0/docker-compose.yml
+++ b/templates/crate/0/docker-compose.yml
@@ -24,7 +24,7 @@ crate-base-node:
     io.rancher.container.hostname_override: container_name
   image: crate:0.55
   entrypoint:
-    - sh
+    - tail -F -n0 /etc/hosts
   volumes_from:
     - crate-datavolume-node
   ports:
