--- a/templates/crate/0/docker-compose.yml
+++ b/templates/crate/0/docker-compose.yml
@@ -23,8 +23,8 @@ crate-base-node:
     crate.node.config.version: '0'
     io.rancher.container.hostname_override: container_name
   image: crate:0.55
-  entrypoint:
-    - tail -F -n0 /etc/hosts
+  command:
+    - /opt/rancher/bin/run.sh
   volumes_from:
     - crate-datavolume-node
   ports:
