--- a/templates/crate/0/docker-compose.yml
+++ b/templates/crate/0/docker-compose.yml
@@ -3,7 +3,7 @@ crate-nodes:
   labels:
     io.rancher.container.hostname_override: container_name
     io.rancher.sidekicks: crate-base-node,crate-datavolume-node
-    io.rancher.scheduler.affinity:container_label_ne: io.rancher.stack_service.name=${stack_name}/${service_name}
+    io.rancher.scheduler.affinity:container_label_ne: io.rancher.stack_service.name=$${stack_name}/$${service_name}
     io.rancher.container.pull_image: always
   volumes_from:
     - crate-datavolume-node
@@ -17,12 +17,12 @@ crate-datavolume-node:
     - /usr/share/crate/config
     - /opt/rancher/bin
   entrypoint: /bin/true
-  image: crate:0.55
+  image: crate:latest
 crate-base-node:
   labels:
     crate.node.config.version: '0'
     io.rancher.container.hostname_override: container_name
-  image: crate:0.55
+  image: crate:latest
   entrypoint: /opt/rancher/bin/run.sh
   volumes_from:
     - crate-datavolume-node
