--- a/templates/crate/0/docker-compose.yml
+++ b/templates/crate/0/docker-compose.yml
@@ -23,7 +23,7 @@ crate-base-node:
     crate.node.config.version: '0'
     io.rancher.container.hostname_override: container_name
   image: crate:latest
-  entrypoint: /opt/rancher/bin/run.sh
+  entrypoint: /bin/sleep 600
   volumes_from:
     - crate-datavolume-node
   ports:
