--- a/templates/crate/0/docker-compose.yml
+++ b/templates/crate/0/docker-compose.yml
@@ -16,14 +16,14 @@ crate-datavolume-node:
     - /data
     - /usr/share/crate/config
     - /opt/rancher/bin
-  entrypoint: /bin/sh /opt/rancher/bin/run.sh
+  entrypoint: /bin/sleep 10
   image: crate:latest
 crate-base-node:
   labels:
     crate.node.config.version: '0'
     io.rancher.container.hostname_override: container_name
   image: crate:latest
-  entrypoint: /bin/sleep 600
+  entrypoint: /bin/sh -c '/bin/sleep 10 && /bin/sh /opt/rancher/bin/run.sh'
   volumes_from:
     - crate-datavolume-node
   ports:
