--- a/templates/crate/0/docker-compose.yml
+++ b/templates/crate/0/docker-compose.yml
@@ -1,4 +1,4 @@
-crate-nodes:
+
   image: jannishuebl/crate-conf:0.0.1
   labels:
     io.rancher.container.hostname_override: container_name
@@ -13,8 +13,8 @@ crate-datavolume-node:
     io.rancher.container.hostname_override: container_name
     io.rancher.container.start_once: true
   volumes:
-    - /data
     - /usr/share/crate/config
+    - /usr/share/crate/data
     - /opt/rancher/bin
   entrypoint: /bin/sleep 10
   image: crate:latest
