--- a/templates/crate/0/docker-compose.yml
+++ b/templates/crate/0/docker-compose.yml
@@ -13,8 +13,8 @@ crate-datavolume-node:
     io.rancher.container.hostname_override: container_name
     io.rancher.container.start_once: true
   volumes:
-    - /usr/share/crate/config
-    - /usr/share/crate/data/crate
+    - /crate/config
+    - /data
     - /opt/rancher/bin
   entrypoint: /bin/sleep 10
   image: crate:latest
