--- a/templates/openvpn-rancherlocal/0/docker-compose.yml
+++ b/templates/openvpn-rancherlocal/0/docker-compose.yml
@@ -11,8 +11,8 @@ openvpn-rancherlocal-server:
   ports:
   - 1194:1194/tcp
   environment:
-    AUTH_METHOD: rancherlocal
-    AUTH_RANCHERLOCAL_URL: ${AUTH_RANCHERLOCAL_URL}/v1/token
+    AUTH_METHOD: local
+    AUTH_USER_HASH: ${AUTH_USER_HASH}
     CERT_COUNTRY: ${CERT_COUNTRY}
     CERT_PROVINCE: ${CERT_PROVINCE}
     CERT_CITY: ${CERT_CITY}
