--- a/templates/postgres-cluster/1/rancher-compose.yml
+++ b/templates/postgres-cluster/1/rancher-compose.yml
@@ -2,6 +2,7 @@
   name: "Postgres HA"
   version: "0.0.1-rancher1"
   description: "Postgres HA"
+  uuid: postgres-ha-0
   questions:
     - variable: cluster_name
       description: "Name for cluster"
