--- a/templates/postgres-cluster/1/rancher-compose.yml
+++ b/templates/postgres-cluster/1/rancher-compose.yml
@@ -6,7 +6,7 @@
   questions:
     - variable: "cluster_name"
       description: "Name for cluster"
-      label: "Cluster name
+      label: "Cluster name"
       type: "string"
       required: true
     - variable: "monkey_pass"
