--- a/templates/postgres-cluster/1/docker-compose.yml
+++ b/templates/postgres-cluster/1/docker-compose.yml
@@ -30,8 +30,8 @@ pgmaster:
         - 5432
 pg1:
     labels:
-        io.rancher.scheduler.affinity:container_label_ne: io.rancher.stack_service.name=$${stack_name}/pg2
-        io.rancher.scheduler.affinity:container_label_ne: io.rancher.stack_service.name=$${stack_name}/pg3
+        io.rancher.scheduler.affinity:container_label_ne: io.rancher.stack_service.name=$${stack_name}/pg2_1
+        io.rancher.scheduler.affinity:container_label_ne: io.rancher.stack_service.name=$${stack_name}/pg3_1
     image: paunin/postgresql-cluster-pgsql
     volumes:
         - "cluster-archives:/var/cluster_archive"
@@ -45,8 +45,8 @@ pg1:
         - 5432
 pg2:
     labels:
-        io.rancher.scheduler.affinity:container_label_ne: io.rancher.stack_service.name=$${stack_name}/pg1
-        io.rancher.scheduler.affinity:container_label_ne: io.rancher.stack_service.name=$${stack_name}/pg3
+        io.rancher.scheduler.affinity:container_label_ne: io.rancher.stack_service.name=$${stack_name}/pg1_1
+        io.rancher.scheduler.affinity:container_label_ne: io.rancher.stack_service.name=$${stack_name}/pg3_1
     image: paunin/postgresql-cluster-pgsql
     volumes:
         - "cluster-archives:/var/cluster_archive"
@@ -60,8 +60,8 @@ pg2:
         - 5432
 pg3:
     labels:
-        io.rancher.scheduler.affinity:container_label_ne: io.rancher.stack_service.name=$${stack_name}/pg1
-        io.rancher.scheduler.affinity:container_label_ne: io.rancher.stack_service.name=$${stack_name}/pg2
+        io.rancher.scheduler.affinity:container_label_ne: io.rancher.stack_service.name=$${stack_name}/pg1_1
+        io.rancher.scheduler.affinity:container_label_ne: io.rancher.stack_service.name=$${stack_name}/pg2_1
     image: paunin/postgresql-cluster-pgsql
     volumes:
         - "cluster-archives:/var/cluster_archive"
