--- a/templates/postgres-cluster/1/docker-compose.yml
+++ b/templates/postgres-cluster/1/docker-compose.yml
@@ -41,6 +41,9 @@ pg1:
         - NODE_NAME=node2
         - CLUSTER_NODE_NETWORK_NAME=pg1 # (default: hostanme of the node)
         - REPLICATION_UPSTREAM_NODE_ID=1
+        #defaults:
+        - CLUSTER_NAME=${cluster_name} # default is pg_cluster
+        - REPLICATION_DB=replication_db # default is replication_db
         - REPLICATION_USER=${replication_user} # default is replication_user
         - REPLICATION_PASSWORD=${replication_pass} # default is replication_pass
     expose:
@@ -58,6 +61,9 @@ pg2:
         - NODE_NAME=node3
         - CLUSTER_NODE_NETWORK_NAME=pg2 # (default: hostanme of the node)
         - REPLICATION_UPSTREAM_NODE_ID=2
+        #defaults:
+        - CLUSTER_NAME=${cluster_name} # default is pg_cluster
+        - REPLICATION_DB=replication_db # default is replication_db
         - REPLICATION_USER=${replication_user} # default is replication_user
         - REPLICATION_PASSWORD=${replication_pass} # default is replication_pass
     expose:
@@ -75,6 +81,9 @@ pg3:
         - NODE_NAME=node4
         - CLUSTER_NODE_NETWORK_NAME=pg3 # (default: hostanme of the node)
         - REPLICATION_UPSTREAM_NODE_ID=3
+        #defaults:
+        - CLUSTER_NAME=${cluster_name} # default is pg_cluster
+        - REPLICATION_DB=replication_db # default is replication_db
         - REPLICATION_USER=${replication_user} # default is replication_user
         - REPLICATION_PASSWORD=${replication_pass} # default is replication_pass
     expose:
@@ -89,7 +98,7 @@ pgpool:
         - REPLICATION_PASSWORD=${replication_pass}
 
         - DB_USERS=${monkey_user}:${monkey_pass} # in format user:password[,user:password[...]]
-        - BACKENDS="0:pgmaster:5432:1:/var/lib/postgresql/data:ALLOW_TO_FAILOVER,1:pg1::::,2:pg2::::,3:pg3- ::::"
+        - BACKENDS="0:pgmaster:5432:1:/var/lib/postgresql/data:ALLOW_TO_FAILOVER,1:pg1::::,2:pg2::::,3:pg3::::"
                   # in format num=ost:port:weight:data_directory:flag[,...]
                   # defaults:
                   #   port: 5432
