--- a/templates/postgres-cluster/2/rancher-compose.yml
+++ b/templates/postgres-cluster/2/rancher-compose.yml
@@ -1,6 +1,6 @@
 .catalog:
   name: "Postgres HA"
-  version: "0.0.1-rancher1-setup"
+  version: "0.0.1-rancher1"
   description: "Postgres HA"
   uuid: postgres-ha-0
   questions:
