--- a/templates/postgres-cluster/2/docker-compose.yml
+++ b/templates/postgres-cluster/2/docker-compose.yml
@@ -83,16 +83,8 @@ pgpool:
         - REPLICATION_PASSWORD=${replication_pass} # default is replication_pass
 
         - DB_USERS=${monkey_user}:${monkey_pass} # in format user:password[,user:password[...]]
-        - BACKENDS=0:pg1:5432:1:/var/lib/postgresql/data:ALLOW_TO_FAILOVER,1:pg2::::,2:pg3::::
-                  # in format num=ost:port:weight:data_directory:flag[,...]
-                  # defaults:
-                  #   port: 5432
-                  #   weight: 1
-                  #   data_directory: /var/lib/postgresql/data
-                  #   flag: ALLOW_TO_FAILOVER
-        - CONFIGS=num_init_children:250,max_pool:4,search_primary_node_timeout:5
-                  # in format variable1:value1[,variable2:value2[,...]]
-                  # used for pgpool.conf file
+        - "BACKENDS=0:pg1:5432:1:/var/lib/postgresql/data:ALLOW_TO_FAILOVER,1:pg2::::,2:pg3::::"
+        - "CONFIGS=num_init_children:250,max_pool:4,search_primary_node_timeout:5"
     expose:
         - 5432
         - 9898 # PCP
